Changed index.html to Home.html and fixed loading screen from being stuck

--- a/Css/Home.css
+++ b/Css/Home.css
@@ -78,7 +78,7 @@ html,body
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 2147483647; /* on top of everything */
+  z-index: 9999; /* on top of everything */
 }
 
 #glyph-decoder 
@@ -87,6 +87,7 @@ html,body
   font-size: 3rem;
   letter-spacing: 0.25rem;
   text-shadow: 0 0 12px #D4AF37;
+   z-index: 9999; /* on top of everything */
 }
 
 .glyph-sub 
@@ -95,6 +96,8 @@ html,body
   font-size: 2rem;
   font-family: system-ui, sans-serif;
   opacity: 0.7;
+  color: #D4AF37;
+   z-index: 9999; /* on top of everything */
 }
 
 .glyph-coords 
@@ -105,6 +108,8 @@ html,body
   letter-spacing: 0.12rem;
   opacity: 0;
   transition: opacity 1s ease;
+  color: #D4AF37;
+   z-index: 9999; /* on top of everything */
 }
 
 .black-box-nebula 
